# bang-card-rpg

./: CMakeLists.txt
data/playcards/: 1  10  11  12  13  2  3  4  5  6  7  8  9
data/rolecards/: 1  10  2  3  4  5  6  7  8  9
data/save/: player1  player2
data/save/gameStack/: 1  10  11  12  2  3  4  5  6  7  8  9
data/save/player1Cards/: 1  2  4  5  6
data/save/player2Cards/: 1  2  3  4  5
src/: AIPlayer.cpp  AIPlayer.h  Action.cpp  Action.h  AddHealthInstruction.h  Application.cpp  Application.h  AttackAction.cpp  AttackAction.h  AttackInstruction.cpp  AttackInstruction.h  Card.h  CardBuilderPersister.cpp  CardBuilderPersister.h  CardFactory.cpp  CardFactory.h  CardResponse.h  DataLoader.cpp  DataLoader.h  DefenseAction.cpp  DefenseAction.h  DefenseInstruction.h  DonorAction.cpp  DonorAction.h  GameManager.cpp  GameManager.h  GiveCardInstruction.h  IfNextCardIsInstruction.h  Instruction.h  InstructionResponse.h  Move.cpp  Move.h  PlayCard.h  Player.cpp  Player.h  RobCardInstruction.h  RoleCard.h  SubMove.cpp  SubMove.h  TakeCardInstruction.h  (+3 more)
uml/: ClassDiagram.puml  zadani.txt
